2011-04-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Fix bad typedef, per MinGW-Bug [#1529].

	* include/imagehlp.h (PREAD_PROCESS_MEMORY_ROUTINE): Corrected, to
	conform with MSDN reference, as identified by Safety0ff.

2011-04-04  Corinna Vinschen  <corinna@vinschen.de>

	Add a missing manifest constant definition.

	* include/winnt.h (DOMAIN_ALIAS_RID_REMOTE_DESKTOP_USERS): Define.

2011-03-29  Corinna Vinschen  <corinna@vinschen.de>

	Win2K and Vista userenv updates.

	* include/userenv.h [_WIN32_WINNT >= 0x0500] (DeleteProfile)
	(GetAllUsersProfileDirectory, GetDefaultUserProfileDirectory)
	(ExpandEnvironmentStringsForUser): Define function aliases.
	[_WIN32_WINNT >= 0x0500] (DeleteProfileA, DeleteProfileW)
	(GetAllUsersProfileDirectoryA, GetAllUsersProfileDirectoryW)
	(GetDefaultUserProfileDirectoryA, GetDefaultUserProfileDirectoryW
	(ExpandEnvironmentStringsForUserA, ExpandEnvironmentStringsForUserW)
	(GetProfileType): Declare function prototypes.
	[_WIN32_WINNT >= 0x0600] (CreateProfile): Declare function prototype.
	[_WIN32_WINNT >= 0x0500] (PT_TEMPORARY, PT_ROAMING, PT_MANDATORY):
	New manifest constants; define them.

2011-03-25  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* Makefile.in: Increment CYGRELEASE to 2.

2011-03-25  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* lib/Makefile.in: Include GDIPLUS_HEADERS in dist target.

2011-03-11  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.17.
	* Makefile.in: Ditto.

2011-03-07  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/winbase.h (PSAPI_WORKING_SET_BLOCK,
	PSAPI_WORKING_SET_INFORMATION): Move from here...
	* include/psapi.h (PSAPI_WORKING_SET_BLOCK,
	PSAPI_WORKING_SET_INFORMATION): ... to here.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sf.net>

	* include/w32api.h: Increment version to 3.16.
	* Makefile.in: Ditto.

2011-03-05  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/commctrl.h (NMTCKEYDOWN): Define.
